--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,26 @@
 </head>
 
 <body class="page__body">
+
+  <svg style="display: none;">
+    <symbol id="left-arrow" viewBox="0 0 22 41">
+      <path opacity="0.3"
+        d="M19.9587 20.4965L0.251671 39.5856C0.171938 39.6621 0.108643 39.7532 0.065443 39.8535C0.0222435 39.9539 0 40.0616 0 40.1704C0 40.2791 0.0222435 40.3868 0.065443 40.4872C0.108643 40.5876 0.171938 40.6786 0.251671 40.7551C0.33144 40.8327 0.426224 40.8943 0.530588 40.9363C0.634953 40.9784 0.746847 41 0.859852 41C0.972857 41 1.08475 40.9784 1.18911 40.9363C1.29348 40.8943 1.38826 40.8327 1.46803 40.7551L21.7475 21.0912C21.8275 21.0138 21.891 20.9219 21.9344 20.8207C21.9777 20.7195 22 20.611 22 20.5015C22 20.3919 21.9777 20.2834 21.9344 20.1822C21.891 20.081 21.8275 19.9891 21.7475 19.9117L1.46803 0.237877C1.30326 0.0842934 1.08329 -0.00102615 0.85474 7.62939e-06C0.6861 0.00154114 0.52166 0.0511971 0.381939 0.14278C0.24222 0.234364 0.133411 0.363811 0.069088 0.51498C0.00476646 0.666149 -0.0122204 0.83234 0.0202503 0.992809C0.052721 1.15328 0.133209 1.30093 0.251671 1.41732L19.9587 20.4965Z"
+        fill="#283645" />
+    </symbol>
+
+    <symbol id="right-arrow" viewBox="0 0 22 41">
+      <path opacity="0.3"
+        d="M19.9587 20.4965L0.251671 39.5856C0.171938 39.6621 0.108643 39.7532 0.065443 39.8535C0.0222435 39.9539 0 40.0616 0 40.1704C0 40.2791 0.0222435 40.3868 0.065443 40.4872C0.108643 40.5876 0.171938 40.6786 0.251671 40.7551C0.33144 40.8327 0.426224 40.8943 0.530588 40.9363C0.634953 40.9784 0.746847 41 0.859852 41C0.972857 41 1.08475 40.9784 1.18911 40.9363C1.29348 40.8943 1.38826 40.8327 1.46803 40.7551L21.7475 21.0912C21.8275 21.0138 21.891 20.9219 21.9344 20.8207C21.9777 20.7195 22 20.611 22 20.5015C22 20.3919 21.9777 20.2834 21.9344 20.1822C21.891 20.081 21.8275 19.9891 21.7475 19.9117L1.46803 0.237877C1.30326 0.0842934 1.08329 -0.00102615 0.85474 7.62939e-06C0.6861 0.00154114 0.52166 0.0511971 0.381939 0.14278C0.24222 0.234364 0.133411 0.363811 0.069088 0.51498C0.00476646 0.666149 -0.0122204 0.83234 0.0202503 0.992809C0.052721 1.15328 0.133209 1.30093 0.251671 1.41732L19.9587 20.4965Z"
+        fill="#283645" />
+    </symbol>
+
+    <symbol id="footer-academy-icon" viewBox="0 0 27 34">
+      <path
+        d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
+    </symbol>
+  </svg>
+
   <header class="page-header">
     <nav class="page-header__nav">
       <ul class="page-header__list">
@@ -73,19 +93,31 @@
         <div class="container">
           <ul class="benefits__list">
             <li class="benefits__item">
-                <img class="benefits__phone" srcset="img/back-mob-1@2x.png 2x" src="img/back-mob-1.png" width="300" height="302">
+              <picture>
+                <source type="image/webp" srcset="img/back-mob-1.webp 1x, img/back-mob-1@2x.webp 2x">
+                <img class="benefits__phone" srcset="img/back-mob-1@2x.png 2x" src="img/back-mob-1.png" width="300"
+                  height="302">
+              </picture>
               <h3 class="benefits__item-heading">Поднимает настроение</h3>
               <p class="benefits__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
                 несколько кликов!</p>
             </li>
             <li class="benefits__item">
-                <img class="benefits__phone" src="img/back-mob-2.png" srcset="img/back-mob-2@2x.png 2x" width="300" height="302">
+              <picture>
+                <source type="image/webp" srcset="img/back-mob-2.webp 1x, img/back-mob-2@2x.webp 2x">
+                <img class="benefits__phone" src="img/back-mob-2.png" srcset="img/back-mob-2@2x.png 2x" width="300"
+                  height="302">
+              </picture>
               <h3 class="benefits__item-heading">Меняет мир вокруг</h3>
               <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью,
                 чтобы&nbsp;усилить&nbsp;эффект</p>
             </li>
             <li class="benefits__item">
-                <img class="benefits__phone" src="img/back-mob-3.png" srcset="img/back-mob-3@2x.png 2x" width="300" height="302">
+              <picture>
+                <source type="image/webp" srcset="img/back-mob-3.webp 1x, img/back-mob-3@2x.webp 2x">
+                <img class="benefits__phone" src="img/back-mob-3.png" srcset="img/back-mob-3@2x.png 2x" width="300"
+                  height="302">
+              </picture>
               <h3 class="benefits__item-heading">Заводит новых&nbsp;друзей</h3>
               <p class="benefits__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
                 и&nbsp;заводите
@@ -113,19 +145,13 @@
     <section class="reviews">
       <div class="container">
         <button type="button" class="reviews__arrow reviews__left">
-          <svg class="reviews__left-arrow" width="22" height="41" viewBox="0 0 22 41"
-            xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.3"
-              d="M19.9587 20.4965L0.251671 39.5856C0.171938 39.6621 0.108643 39.7532 0.065443 39.8535C0.0222435 39.9539 0 40.0616 0 40.1704C0 40.2791 0.0222435 40.3868 0.065443 40.4872C0.108643 40.5876 0.171938 40.6786 0.251671 40.7551C0.33144 40.8327 0.426224 40.8943 0.530588 40.9363C0.634953 40.9784 0.746847 41 0.859852 41C0.972857 41 1.08475 40.9784 1.18911 40.9363C1.29348 40.8943 1.38826 40.8327 1.46803 40.7551L21.7475 21.0912C21.8275 21.0138 21.891 20.9219 21.9344 20.8207C21.9777 20.7195 22 20.611 22 20.5015C22 20.3919 21.9777 20.2834 21.9344 20.1822C21.891 20.081 21.8275 19.9891 21.7475 19.9117L1.46803 0.237877C1.30326 0.0842934 1.08329 -0.00102615 0.85474 7.62939e-06C0.6861 0.00154114 0.52166 0.0511971 0.381939 0.14278C0.24222 0.234364 0.133411 0.363811 0.069088 0.51498C0.00476646 0.666149 -0.0122204 0.83234 0.0202503 0.992809C0.052721 1.15328 0.133209 1.30093 0.251671 1.41732L19.9587 20.4965Z"
-              fill="#283645" />
+          <svg class="reviews__left-arrow" width="22" height="41">
+            <use xlink:href="#left-arrow"></use>
           </svg>
         </button>
         <button type="button" class="reviews__arrow reviews__right">
-          <svg class="reviews__right-arrow" width="22" height="41" viewBox="0 0 22 41"
-            xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.3"
-              d="M19.9587 20.4965L0.251671 39.5856C0.171938 39.6621 0.108643 39.7532 0.065443 39.8535C0.0222435 39.9539 0 40.0616 0 40.1704C0 40.2791 0.0222435 40.3868 0.065443 40.4872C0.108643 40.5876 0.171938 40.6786 0.251671 40.7551C0.33144 40.8327 0.426224 40.8943 0.530588 40.9363C0.634953 40.9784 0.746847 41 0.859852 41C0.972857 41 1.08475 40.9784 1.18911 40.9363C1.29348 40.8943 1.38826 40.8327 1.46803 40.7551L21.7475 21.0912C21.8275 21.0138 21.891 20.9219 21.9344 20.8207C21.9777 20.7195 22 20.611 22 20.5015C22 20.3919 21.9777 20.2834 21.9344 20.1822C21.891 20.081 21.8275 19.9891 21.7475 19.9117L1.46803 0.237877C1.30326 0.0842934 1.08329 -0.00102615 0.85474 7.62939e-06C0.6861 0.00154114 0.52166 0.0511971 0.381939 0.14278C0.24222 0.234364 0.133411 0.363811 0.069088 0.51498C0.00476646 0.666149 -0.0122204 0.83234 0.0202503 0.992809C0.052721 1.15328 0.133209 1.30093 0.251671 1.41732L19.9587 20.4965Z"
-              fill="#283645" />
+          <svg class="reviews__right-arrow" width="22" height="41">
+            <use xlink:href="#right-arrow"></use>
           </svg>
         </button>
         <div class="reviews__reviews-slider">
@@ -176,7 +202,7 @@
               <p class="price__text">1,99 USD</p>
             </th>
             <th class="price__head">
-              <span class="price__hit"><img src="img/hit.png" width="74" height="74" aria-label="Хит продаж"></span>
+              <span class="price__hit"><img src="img/hit.svg" width="74" height="74" aria-label="Хит продаж"></span>
               <h2 class="price__heading">Стандарт</h2>
               <p class="price__text">3,99 USD</p>
             </th>
@@ -293,10 +319,8 @@
           </li>
         </ul>
         <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__developer">
-          Разработано <svg class="footer__html" width="27" height="34" viewBox="0 0 27 34"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
+          Разработано <svg class="footer__html" width="27" height="34">
+            <use xlink:href="#footer-academy-icon"></use>
           </svg>
         </a>
       </div>
