--- a/source/catalog.html
+++ b/source/catalog.html
@@ -167,7 +167,7 @@
                 srcset="img/photo-1-desktop.webp 1x, img/photo-1-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-1-tablet.webp 1x, img/photo-1-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-1-mobile.webp" srcset="img/photo-1-mobile@2x.webp"
+              <source type="image/webp" srcset="img/photo-1-mobile.webp 1x, img/photo-1-mobile@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-1-desktop.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
@@ -190,7 +190,7 @@
                 srcset="img/photo-2-desktop.webp 1x, img/photo-2-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-2-tablet.webp 1x, img/photo-2-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-2-mobile.webp" srcset="img/photo-2-mobile@2x.webp"
+              <source type="image/webp" srcset="img/photo-2-mobile.webp 1x, img/photo-2-mobile@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-2-desktop.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-2-tablet.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
@@ -213,7 +213,7 @@
                 srcset="img/photo-3-desktop.webp 1x, img/photo-3-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-3-tablet.webp 1x, img/photo-3-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-3-mob.webp" srcset="img/photo-3-mob@2x.webp"
+              <source type="image/webp" srcset="img/photo-3-mob.webp 1x, img/photo-3-mob@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-3-desktop.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-3-tablet.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
@@ -236,7 +236,7 @@
                 srcset="img/photo-4-desktop.webp 1x, img/photo-4-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-4-tablet.webp 1x, img/photo-4-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-4-mob.webp" srcset="img/photo-4-mob@2x.webp"
+              <source type="image/webp" srcset="img/photo-4-mob.webp 1x, img/photo-4-mob@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-4-desktop.jpg 1x, img/photo-4-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-4-tablet.jpg 1x, img/photo-4-tablet@2x.jpg 2x">
@@ -259,7 +259,7 @@
                 srcset="img/photo-5-desktop.webp 1x, img/photo-5-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-5-tablet.webp 1x, img/photo-5-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-5-mob.webp" srcset="img/photo-5-mob@2x.webp"
+              <source type="image/webp" srcset="img/photo-5-mob.webp 1x, img/photo-5-mob@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-5-desktop.jpg 1x, img/photo-5-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-5-tablet.jpg 1x, img/photo-5-tablet@2x.jpg 2x">
@@ -282,7 +282,7 @@
                 srcset="img/photo-6-desktop.webp 1x, img/photo-6-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-6-tablet.webp 1x, img/photo-6-tablet@2x.webp 2x">
-              <source type="image/webp" src="img/photo-6-mob.webp" srcset="img/photo-6-mob@2x.webp"
+              <source type="image/webp" srcset="img/photo-6-mob.webp 1x, img/photo-6-mob@2x.webp 2x"
                 alt="Фото пользователя" width="280" height="180">
               <source media="(min-width: 940px)" srcset="img/photo-6-desktop.jpg 1x, img/photo-6-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-6-tablet.jpg 1x, img/photo-6-tablet@2x.jpg 2x">
