--- a/source/index.html
+++ b/source/index.html
@@ -140,7 +140,6 @@
         </p>
       </div>
     </div>
-    </div>
   </header>
   <main class="page__main">
 
@@ -159,7 +158,7 @@
               <picture>
                 <source type="image/webp" srcset="img/back-mob-1.webp 1x, img/back-mob-1@2x.webp 2x">
                 <img class="benefits__phone" srcset="img/back-mob-1@2x.png 2x" src="img/back-mob-1.png" width="300"
-                  height="302">
+                  height="302" alt="Фото телефона без фильтра">
               </picture>
               <h3 class="benefits__item-heading">Поднимает настроение</h3>
               <p class="benefits__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
@@ -169,7 +168,7 @@
               <picture>
                 <source type="image/webp" srcset="img/back-mob-2.webp 1x, img/back-mob-2@2x.webp 2x">
                 <img class="benefits__phone" src="img/back-mob-2.png" srcset="img/back-mob-2@2x.png 2x" width="300"
-                  height="302">
+                  height="302" alt="Фото телефона с фильтром">
               </picture>
               <h3 class="benefits__item-heading">Меняет мир вокруг</h3>
               <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью,
@@ -179,7 +178,7 @@
               <picture>
                 <source type="image/webp" srcset="img/back-mob-3.webp 1x, img/back-mob-3@2x.webp 2x">
                 <img class="benefits__phone" src="img/back-mob-3.png" srcset="img/back-mob-3@2x.png 2x" width="300"
-                  height="302">
+                  height="302" alt="Фото телефона">
               </picture>
               <h3 class="benefits__item-heading">Заводит новых&nbsp;друзей</h3>
               <p class="benefits__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
@@ -261,16 +260,17 @@
           <tr>
             <th class="price__head price_head-hidden"></th>
             <th class="price__head">
-              <h2 class="price__heading">База</h2>
+              <p class="price__heading">База</p>
               <p class="price__text">1,99 USD</p>
             </th>
             <th class="price__head">
-              <span class="price__hit"><img src="img/hit.svg" width="74" height="74" aria-label="Хит продаж"></span>
-              <h2 class="price__heading">Стандарт</h2>
+              <span class="price__hit"><img src="img/hit.svg" width="74" height="74" aria-label="Хит продаж"
+                  alt="Хит продаж"></span>
+              <p class="price__heading">Стандарт</p>
               <p class="price__text">3,99 USD</p>
             </th>
             <th class="price__head">
-              <h2 class="price__heading">Анлим</h2>
+              <p class="price__heading">Анлим</p>
               <p class="price__text">9,99 USD</p>
             </th>
           </tr>
@@ -336,7 +336,7 @@
 
     <section class="feedback">
       <div class="container">
-        <h1 class="visually-hidden">Обратная связь</h1>
+        <h2 class="visually-hidden">Обратная связь</h2>
         <div class="feedback__text">
           <p class="feedback__subtitle">Остались вопросы?<br> Свяжитесь с нами!</p>
         </div>
@@ -359,7 +359,7 @@
         <div class="feedback__top-img"></div>
         <iframe class="feedback__online-map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002912!2d30.320858715826557!3d59.938719169054494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1607535399156!5m2!1sru!2sru"
-          frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </section>
   </main>
