--- a/source/catalog.html
+++ b/source/catalog.html
@@ -167,8 +167,7 @@
                 srcset="img/photo-1-desktop.webp 1x, img/photo-1-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-1-tablet.webp 1x, img/photo-1-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-1-mobile.webp 1x, img/photo-1-mobile@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-1-mobile.webp 1x, img/photo-1-mobile@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-1-desktop.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
               <img src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -190,8 +189,7 @@
                 srcset="img/photo-2-desktop.webp 1x, img/photo-2-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-2-tablet.webp 1x, img/photo-2-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-2-mobile.webp 1x, img/photo-2-mobile@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-2-mobile.webp 1x, img/photo-2-mobile@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-2-desktop.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-2-tablet.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
               <img src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -213,8 +211,7 @@
                 srcset="img/photo-3-desktop.webp 1x, img/photo-3-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-3-tablet.webp 1x, img/photo-3-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-3-mob.webp 1x, img/photo-3-mob@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-3-mob.webp 1x, img/photo-3-mob@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-3-desktop.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-3-tablet.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
               <img src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -236,8 +233,7 @@
                 srcset="img/photo-4-desktop.webp 1x, img/photo-4-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-4-tablet.webp 1x, img/photo-4-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-4-mob.webp 1x, img/photo-4-mob@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-4-mob.webp 1x, img/photo-4-mob@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-4-desktop.jpg 1x, img/photo-4-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-4-tablet.jpg 1x, img/photo-4-tablet@2x.jpg 2x">
               <img src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -259,8 +255,7 @@
                 srcset="img/photo-5-desktop.webp 1x, img/photo-5-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-5-tablet.webp 1x, img/photo-5-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-5-mob.webp 1x, img/photo-5-mob@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-5-mob.webp 1x, img/photo-5-mob@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-5-desktop.jpg 1x, img/photo-5-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-5-tablet.jpg 1x, img/photo-5-tablet@2x.jpg 2x">
               <img src="img/photo-5-mobile.jpg" srcset="img/photo-5-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -282,8 +277,7 @@
                 srcset="img/photo-6-desktop.webp 1x, img/photo-6-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 660px)"
                 srcset="img/photo-6-tablet.webp 1x, img/photo-6-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/photo-6-mob.webp 1x, img/photo-6-mob@2x.webp 2x"
-                alt="Фото пользователя" width="280" height="180">
+              <source type="image/webp" srcset="img/photo-6-mob.webp 1x, img/photo-6-mob@2x.webp 2x">
               <source media="(min-width: 940px)" srcset="img/photo-6-desktop.jpg 1x, img/photo-6-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/photo-6-tablet.jpg 1x, img/photo-6-tablet@2x.jpg 2x">
               <img src="img/photo-6-mobile.jpg" srcset="img/photo-6-mobile@2x.jpg 2x" alt="Фото пользователя"
@@ -311,6 +305,7 @@
     </section>
 
     <section class="main-filter">
+      <h2 class="visually-hidden">Фильтр фотографий</h2>
       <div class="container">
         <div class="main-filter__flex-box">
           <picture>
