--- a/source/index.html
+++ b/source/index.html
@@ -211,8 +211,8 @@
                   height="302" alt="Фото телефона с фильтром">
               </picture>
               <h3 class="benefits__item-heading">Меняет мир вокруг</h3>
-              <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью,
-                чтобы&nbsp;усилить&nbsp;эффект</p>
+              <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью,&nbsp;
+                чтобы усилить&nbsp;эффект</p>
             </li>
             <li class="benefits__item">
               <picture>
@@ -236,7 +236,7 @@
             <p class="fake-inform__text">
               Британские ученые провели исследования
               и&nbsp;доказали, что&nbsp;положительный эффект
-              от&nbsp;использования приложения длится&nbsp;целые сутки!
+              от&nbsp;использования&nbsp;приложения&nbsp;длится целые сутки!
             </p>
             <a href="#" class="fake-inform__link">Узнать больше об исследовании</a>
           </div>
