--- a/source/catalog.html
+++ b/source/catalog.html
@@ -393,7 +393,7 @@
               </li>
             </ul>
             <div class="main-filter__btn">
-              <button class="main-fiter__link-btn" type="button">Запостить</button>
+              <button class="main-fiter__link-btn" type="submit">Запостить</button>
               <button class="main-filter__cancel-btn" type="button" disabled>Отмена</button>
             </div>
           </div>
