--- a/source/form.html
+++ b/source/form.html
@@ -117,20 +117,23 @@
   <header class="page-header-form">
     <nav class="page-header-form__nav">
       <ul class="page-header-form__list">
+        <!--Нужно копировать закоментированные классы к каждому элементу, чтобы получить реализацию закрытого меню-->
+        <!--page-header-form__top-line-item--close-->
         <li class="page-header-form__top-line-item">
           <a href="index.html" class="page-header-form__logo">
-            <svg class="page-header__form-desktop-logo" width="147" height="40">
+            <svg class="page-header-form__desktop-logo" width="147" height="40">
               <use xlink:href="#header-desktop-logo"></use>
             </svg>
             <span class="visually-hidden">Логотип приложения Pink</span>
           </a>
           <button type="button" class="page-header-form__toggle-btn page-header-form__toggle-btn--close"></button>
         </li>
-        <li>
+        <!--page-header-form__bottom-line--close-->
+        <li class="page-header-form__bottom-line">
           <ul class="page-header-form__list page-header-form__list-flex">
             <li class="page-header-form__item"><a class="page-header-form__link" href="index.html">Главная</a></li>
             <li class="page-header-form__item"><a class="page-header-form__link" href="catalog.html">Фотографии</a></li>
-            <li class="page-header-form__item"><a class="page-header-form__link page-header-form__item--active"
+            <li class="page-header-form__item"><a class="page-header-form__link page-header-form__link--active"
                 href="#">Конкурс</a></li>
             <li class="page-header-form__item"><a class="page-header-form__link"
                 href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
@@ -138,8 +141,10 @@
         </li>
       </ul>
     </nav>
+    <!--page-header-form__form-heading--close-->
     <div class="page-header-form__form-heading">
       <div class="container">
+        <!--page-header-form__form-main-heading--close-->
         <p class="page-header-form__form-main-heading">Конкурс на самое безбашенное путешествие с Пинк</p>
       </div>
     </div>
@@ -307,9 +312,9 @@
     <h2 class="send-popup__heading">Ваша заявка
       отправлена</h2>
     <p class="send-popup__text">Спасибо за ваше участие, ваша
-      заявка уже поступила к нам. В
-      ближайшее время мы рассмотрим
-      ее и оповестим вас.</p>
+      заявка <br class="send-popup__br">&nbsp; уже поступила к нам. В
+      ближайшее <br class="send-popup__br">&nbsp; время мы рассмотрим
+      ее и <br class="send-popup__br">&nbsp; оповестим вас.</p>
     <div class="send-popup__wrapper">
       <button class="send-popup__btn" type="button">Закрыть окно</button>
     </div>
